# winyl-shop

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: settings.py  urls.py
vinyl_store/: admin.py  apps.py  models.py  urls.py  views.py
vinyl_store/fixtures/: initial_data.json
vinyl_store/migrations/: 0001_initial.py  0002_remove_order_customer_remove_order_vinyl_and_more.py
vinyl_store/static/css/: style.css
vinyl_store/templates/vinyl_store/: artist_form.html  artist_list.html  base.html  genre_confirm_delete.html  genre_form.html  genre_list.html  order_detail.html  order_list.html  order_year_archive.html  vinyl_confirm_delete.html  vinyl_detail.html  vinyl_form.html  vinyl_list.html  vinyls_by_genre.html
